fix overflow

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,13 +1,12 @@
-* {
+html,
+body {
   font-size: 16px;
   font-family: "Roboto Mono", monospace;
   font-weight: 400;
-}
-
-html,
-body {
-  width: 100%;
-  padding: 2rem;
+  padding: 1rem;
+  justify-content: center;
+  overflow-x: hidden;
+  height: 200%;
 }
 
 /* Dark mode */
@@ -30,23 +29,18 @@ body {
 }
 
 header {
+  padding: 1rem;
+  background-color: rgba(230, 230, 230, 0.8);
   position: fixed;
-  z-index: 1;
-  width: 100%;
+  z-index: 10;
   align-content: center;
 }
 
-ul {
+nav ul {
+  display: flex;
   list-style: none;
   display: block;
-  width: 100%;
   text-align: center;
-}
-
-ul:after {
-  content: "";
-  display: inline-block;
-  width: 100%;
 }
 
 nav li {
@@ -60,16 +54,11 @@ nav li a {
   text-decoration: none;
 }
 
-/* .grid {
-  display: grid;
-  grid-gap: 1rem 1rem;
-  grid-template-columns: minmax(200px, 800px);
-  grid-template: repeat(4, 20px) 1fr repeat(4, 20px) / repeat(2, 1fr);
-}
-
 .intro {
-  grid-area: 5/ 1 / 6 / 2;
-} */
+  display: block;
+  position: relative;
+  top: 10rem;
+}
 
 .intro h1 {
   font-size: 4rem;
